creating new branch to hotfix some issues

--- a/src/templates/aggregateTemplate.html
+++ b/src/templates/aggregateTemplate.html
@@ -1,4 +1,4 @@
-<!--ng.defaultAggregateTemplate-->
+<!--ng.aggregateTemplate-->
 <div ng-click="row.toggleExpand()" ng-style="{'left': row.offsetleft}" class="ngAggregate">
     <span class="ngAggregateText">{{row.label CUSTOM_FILTERS}} ({{row.totalChildren()}} {{AggItemsLabel}})</span>
     <div class="{{row.aggClass()}}"></div>
