--- a/src/templates/cellTemplate.html
+++ b/src/templates/cellTemplate.html
@@ -1,2 +1,2 @@
-<!--ng.defaultCellTemplate-->
+<!--ng.cellTemplate-->
 <div ng-class="'ngCellText colt' + $index"><span ng-cell-text>{{COL_FIELD CUSTOM_FILTERS}}</span></div>
