--- a/src/templates/gridTemplate.html
+++ b/src/templates/gridTemplate.html
@@ -1,4 +1,4 @@
-<!--ng.defaultGridTemplate-->
+<!--ng.gridTemplate-->
     <div class="ngTopPanel" ng-class="{'ui-widget-header':jqueryUITheme, 'ui-corner-top': jqueryUITheme}" ng-style="topPanelStyle()">
         <div class="ngGroupPanel" ng-show="showGroupPanel()" ng-style="headerStyle()">
             <div class="ngGroupPanelDescription" ng-show="configGroups.length == 0">{{i18n.ngGroupPanelDescription}}</div>
