--- a/src/templates/headerCellTemplate.html
+++ b/src/templates/headerCellTemplate.html
@@ -1,4 +1,4 @@
-<!--ng.defaultHeaderCellTemplate-->
+<!--ng.headerCellTemplate-->
 <div ng-click="col.sort()" class="ngHeaderSortColumn {{col.headerClass}}" ng-style="{'cursor': col.cursor}" ng-class="{ 'ngSorted': !noSortVisible }">
     <div class="ngHeaderText colt{{$index}}">{{col.displayName}}</div>
     <div class="ngSortButtonDown" ng-show="col.showSortButtonDown()"></div>
