--- a/src/templates/headerRowTemplate.html
+++ b/src/templates/headerRowTemplate.html
@@ -1,2 +1,2 @@
-<!--ng.defaultHeaderRowTemplate-->
+<!--ng.headerRowTemplate-->
 <div ng-repeat="col in visibleColumns()" class="ngHeaderCell col{{$index}}" ng-header-cell></div>
