Add examples for cell selection

--- a/partials/examplesPage.html
+++ b/partials/examplesPage.html
@@ -26,6 +26,9 @@
 			<section id="masterdetail" ng-controller="MasterDetailExampleCtrl" style="height: 550px;">
 				<div ng-include src="'partials/exampleDefinitions/masterDetail/masterDetailsExample.html'"></div>
 			</section>
+			<section id="cellSelection" style="height: 1100px;">
+				<div ng-include src="'partials/exampleDefinitions/cellSelection/cellSelectionExample.html'"></div>
+			</section>
 		</div>
 	</div>
 </div>
