Adding row selection example.

--- a/partials/examplesPage.html
+++ b/partials/examplesPage.html
@@ -29,6 +29,9 @@
 			<section id="cellSelection" style="height: 1100px;">
 				<div ng-include src="'partials/exampleDefinitions/cellSelection/cellSelectionExample.html'"></div>
 			</section>
+			<section id="rowSelection" ng-controller="RowSelectionExampleCtrl" style="height: 550px;">
+				<div ng-include src="'partials/exampleDefinitions/rowSelection/rowSelectionExample.html'"></div>
+			</section>
 		</div>
 	</div>
 </div>
