Fixed cell selection. Fixed ui-if bug.
Added $scope.$on for sending digest requests.

--- a/src/templates/focusedCellEditTemplate.html
+++ b/src/templates/focusedCellEditTemplate.html
@@ -1,9 +1,9 @@
 <!--ng.focusedCellEditTemplate-->
 <div ng-cell-has-focus>
-	<div ui-if="!isFocused">
+	<div ng-if="!isFocused">
 	DISPLAY_CELL_TEMPLATE
 	</div>
-	<div ui-if="isFocused">
+	<div ng-if="isFocused">
 	EDITABLE_CELL_TEMPLATE
 	</div>
 </div>
