updating to latest ng-grid. fix for row selections

--- a/partials/exampleDefinitions/rowSelection/rowSelectionJS.html
+++ b/partials/exampleDefinitions/rowSelection/rowSelectionJS.html
@@ -10,12 +10,12 @@ app.controller('MyCtrl', function($scope) {
         data: 'myData'
     };	
     $scope.$on('ngGridEventData', function(){
-        $scope.myData[0].ngGridRow.setSelection(true);
+        $scope.gridOptions.selectRow(0, true);
     });
     $scope.selectEnosRow = function(){
         angular.forEach($scope.myData, function(data, index){
             if(data.name == 'Enos'){
-                $scope.myData[index].ngGridRow.setSelection(true);
+                $scope.gridOptions.selectItem(index, true);
             }
         });
     };
