binding z-index to pinned state in template

--- a/ng-grid.css
+++ b/ng-grid.css
@@ -241,7 +241,6 @@
 	position: absolute;
     top: 11px; 
     left: 6px;
-    z-index: 5;
 }
 input[type="checkbox"] {
 	margin: 0;
@@ -253,7 +252,10 @@ input {
 .ngSelectionCell{
 	margin-top: 9px;
 	margin-left: 6px;
-    z-index: 5;
+}
+.ngSelectionCheckbox{
+	margin-top: 9px;
+	margin-left: 6px;
 }
 .ngNoSort {
     cursor:default;
