adding column pinning example

--- a/partials/examplesPage.html
+++ b/partials/examplesPage.html
@@ -29,8 +29,11 @@
 			<section id="cellSelection" style="height: 1100px;">
 				<div ng-include src="'partials/exampleDefinitions/cellSelection/cellSelectionExample.html'"></div>
 			</section>
-			<section id="rowSelection" ng-controller="RowSelectionExampleCtrl" style="height: 550px;">
-				<div ng-include src="'partials/exampleDefinitions/rowSelection/rowSelectionExample.html'"></div>
+		    <section id="rowSelection" ng-controller="RowSelectionExampleCtrl" style="height: 550px;">
+		        <div ng-include src="'partials/exampleDefinitions/rowSelection/rowSelectionExample.html'"></div>
+		    </section>
+            <section id="columnPinning" ng-controller="ColumnPinningExampleCtrl" style="height: 550px;">
+				<div ng-include src="'partials/exampleDefinitions/columnPinning/columnPinningExample.html'"></div>
 			</section>
 		</div>
 	</div>
