--- a/src/templates/headerRowTemplate.html
+++ b/src/templates/headerRowTemplate.html
@@ -1,2 +1,2 @@
 <!--ng.headerRowTemplate-->
-<div ng-style="{'z-index': col.zIndex()}" ng-repeat="col in visibleColumns()" class="ngHeaderCell col{{$index}}" ng-header-cell></div>
+<div ng-style="{'z-index': col.zIndex()}" ng-repeat="col in renderedColumns" class="ngHeaderCell col{{col.index}}" ng-header-cell></div>
