major changes to accomoodate column virt.

--- a/src/templates/cellTemplate.html
+++ b/src/templates/cellTemplate.html
@@ -1,2 +1,2 @@
 <!--ng.cellTemplate-->
-<div ng-class="'ngCellText colt' + col.index"><span ng-cell-text>{{COL_FIELD CUSTOM_FILTERS}}</span></div>
+<div class="ngCellText" ng-class="col.colIndex()"><span ng-cell-text>{{COL_FIELD CUSTOM_FILTERS}}</span></div>
