--- a/src/templates/gridTemplate.html
+++ b/src/templates/gridTemplate.html
@@ -1,6 +1,6 @@
 <!--ng.gridTemplate-->
     <div class="ngTopPanel" ng-class="{'ui-widget-header':jqueryUITheme, 'ui-corner-top': jqueryUITheme}" ng-style="topPanelStyle()">
-        <div class="ngGroupPanel" ng-show="showGroupPanel()" ng-style="headerStyle()">
+        <div class="ngGroupPanel" ng-show="showGroupPanel()" ng-style="groupPanelStyle()">
             <div class="ngGroupPanelDescription" ng-show="configGroups.length == 0">{{i18n.ngGroupPanelDescription}}</div>
             <ul ng-show="configGroups.length > 0" class="ngGroupList">
                 <li class="ngGroupItem" ng-repeat="group in configGroups">
