Fixed major issues with cell navigation and col virtualization. Cell editing is now like excel.

--- a/src/templates/editableCellTemplate.html
+++ b/src/templates/editableCellTemplate.html
@@ -1,2 +1,2 @@
 <!--ng.editableCellTemplate-->
-<input ng-cell-input ng-class="'colt' + col.index" ng-input="COL_FIELD" />
+<input ng-class="'colt' + col.index" ng-input="COL_FIELD" />
