--- a/src/templates/focusedCellEditTemplate.html
+++ b/src/templates/focusedCellEditTemplate.html
@@ -1,5 +1,5 @@
 <!--ng.focusedCellEditTemplate-->
-<div ng-cell-has-focus>
+<div ng-cell-has-focus ng-dblclick="editCell()">
 	<div ng-if="!isFocused">
 	DISPLAY_CELL_TEMPLATE
 	</div>
