shortening cellEdit option to be enableCellEdit

--- a/src/templates/focusedCellEditTemplate.html
+++ b/src/templates/focusedCellEditTemplate.html
@@ -1,4 +1,4 @@
-<!--ng.focusedCellEditTemplate-->
+<!--ng.cellEditTemplate-->
 <div ng-cell-has-focus ng-dblclick="editCell()">
 	<div ng-if="!isFocused">
 	DISPLAY_CELL_TEMPLATE
