fixing paging example

--- a/partials/exampleDefinitions/paging/pagingJS.html
+++ b/partials/exampleDefinitions/paging/pagingJS.html
@@ -50,6 +50,7 @@ app.controller('MyCtrl', function($scope, $http) {
     $scope.gridOptions = {
         data: 'myData',
         enablePaging: true,
+		showFooter: true,
         pagingOptions: $scope.pagingOptions,
         filterOptions: $scope.filterOptions
     };
