--- a/src/templates/headerRowTemplate.html
+++ b/src/templates/headerRowTemplate.html
@@ -1,1 +1,1 @@
-<div ng-style="{'z-index': col.zIndex(), height: col.headerRowHeight}" ng-repeat="col in renderedColumns" ng-class="col.colIndex()" class="ngHeaderCell" ng-header-cell></div>
+<div ng-style="{ height: col.headerRowHeight }" ng-repeat="col in renderedColumns" ng-class="col.colIndex()" class="ngHeaderCell" ng-header-cell></div>
