--- a/src/templates/menuTemplate.html
+++ b/src/templates/menuTemplate.html
@@ -1,4 +1,4 @@
-<div class="ngHeaderButton" ng-click="toggleShowMenu()">
+<div ng-show="showColumnMenu || showFilter"  class="ngHeaderButton" ng-click="toggleShowMenu()">
     <div class="ngHeaderButtonArrow"></div>
 </div>
 <div ng-show="showMenu" class="ngColMenu">
