added enableHighlighting option
fixed grouping bug where the grid couldn't be drag-grouped until after a
digest happend after grid was rendered. fixed minor display issue.

--- a/ng-grid.css
+++ b/ng-grid.css
@@ -11,7 +11,13 @@
 .ngGrid{
     background-color: rgb(253, 253, 253);  
 }
-
+.ngGrid.unselectable {
+    -moz-user-select: none; 
+    -khtml-user-select: none; 
+    -webkit-user-select: none; 
+    -o-user-select: none;
+    user-select: none;
+}
 /******** Header ********/
 
 .ngGroupPanel{
