Fixes #374, adding examples link for sortFn
The column sortFn works exactly the same as a comparator function you
would pass to an array sort, so a link has been added to the MDN docs that
explains how Array sort functions work.

--- a/partials/apiPage.html
+++ b/partials/apiPage.html
@@ -27,7 +27,7 @@
 		<tr ng-repeat="data in columnDefsOptionsData">
 			<td style="padding: 5px">{{data.id}}</td>
 			<td style="padding: 5px">{{data.defaultValue}}</td>
-			<td style="padding: 5px">{{data.definition}}</td>
+			<td style="padding: 5px" ng-bind-html-unsafe="data.definition"></td>
 			<td style="padding: 5px">{{data.plunker}}</td>
 		</tr>
 	</table>
