Closes #389, updating server-side paging example

--- a/partials/exampleDefinitions/paging/pagingExample.html
+++ b/partials/exampleDefinitions/paging/pagingExample.html
@@ -9,6 +9,6 @@
 	<div ng-include src="link()"></div>
 </div>
 <div style="float: right;">
-	<p>Below is the outcome of the grid. View plunker <a target="blank" href="http://plnkr.co/edit/zBbFOTsf1hvTXjK0NzU2?p=preview">here</a>.</p>
+	<p>Below is the outcome of the grid. View plunker <a target="blank" href="http://plnkr.co/edit/4LyAek?p=preview">here</a>.</p>
 	<div style=" margin-left: auto; margin-right: auto; border: 1px solid rgb(212,212,212); width: 500px; height: 300px; margin-top: 20px; " ng-grid="gridOptions"></div>
 </div>
