Adjust footer display of total items and filtered items when paging enabled
The footer display of Total Items and Showing Items are correct within the context of all data on the client. However, in the case of server side paging, neither of these counts align with the total data on the server. This commit adjusts the maxRows function in footer.js and the totalFilteredItemsLength function in grid.js to account for server side paging

--- a/src/templates/footerTemplate.html
+++ b/src/templates/footerTemplate.html
@@ -1,7 +1,7 @@
 <div ng-show="showFooter" class="ngFooterPanel" ng-class="{'ui-widget-content': jqueryUITheme, 'ui-corner-bottom': jqueryUITheme}" ng-style="footerStyle()">
     <div class="ngTotalSelectContainer" >
         <div class="ngFooterTotalItems" ng-class="{'ngNoMultiSelect': !multiSelect}" >
-            <span class="ngLabel">{{i18n.ngTotalItemsLabel}} {{maxRows()}}</span><span ng-show="filterText.length > 0" class="ngLabel">({{i18n.ngShowingItemsLabel}} {{totalFilteredItemsLength()}})</span>
+            <span class="ngLabel">{{i18n.ngTotalItemsLabel}} {{maxRows()}}</span><span ng-show="filterText.length > 0" class="ngLabel">&nbsp;({{i18n.ngShowingItemsLabel}} {{totalFilteredItemsLength()}})</span>
         </div>
         <div class="ngFooterSelectedItems" ng-show="multiSelect">
             <span class="ngLabel">{{i18n.ngSelectedItemsLabel}} {{selectedItems.length}}</span>
