--- a/src/templates/checkboxHeaderTemplate.html
+++ b/src/templates/checkboxHeaderTemplate.html
@@ -1,1 +1,1 @@
-<input class="ngSelectionHeader" type="checkbox" ng-show="multiSelect" ng-model="allSelected" ng-change="toggleSelectAll(allSelected)"/>
+<input class="ngSelectionHeader" type="checkbox" ng-show="multiSelect" ng-model="allSelected" ng-change="toggleSelectAll(allSelected, true)"/>
