--- a/src/templates/cellEditTemplate.html
+++ b/src/templates/cellEditTemplate.html
@@ -1,8 +1,8 @@
 <div ng-cell-has-focus ng-dblclick="editCell()">
-	<div ng-if="!isFocused">
+	<div ng-edit-cell-if="!isFocused">
 	DISPLAY_CELL_TEMPLATE
 	</div>
-	<div ng-if="isFocused">
+	<div ng-edit-cell-if="isFocused">
 	EDITABLE_CELL_TEMPLATE
 	</div>
 </div>
