Removing all borders. Fixing a few width issues.

--- a/src/less/global.less
+++ b/src/less/global.less
@@ -31,6 +31,17 @@
   position: relative;
 }
 
+.ngVerticalBar {
+  position: absolute;
+  left:0;
+  width:0;
+}
+
+.ngVerticalBarVisible {
+  width: 1px;
+  background-color: @borderColor;
+}
+
 @import 'header';
 @import 'menu';
 @import 'grouping';
