--- a/ng-grid.css
+++ b/ng-grid.css
@@ -22,6 +22,15 @@
 .ngCanvas {
   position: relative;
 }
+.ngVerticalBar {
+  position: absolute;
+  left: 0;
+  width: 0;
+}
+.ngVerticalBarVisible {
+  width: 1px;
+  background-color: #d4d4d4;
+}
 .ngHeaderContainer {
   position: relative;
   overflow: hidden;
@@ -29,8 +38,6 @@
   background-color: inherit;
 }
 .ngHeaderCell {
-  border-right: 1px solid #d4d4d4;
-  border-left: 1px solid #d4d4d4;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -307,14 +314,9 @@
 .ngCell {
   overflow: hidden;
   position: absolute;
-  border-right: 1px solid #d4d4d4;
-  border-left: 1px solid #d4d4d4;
   top: 0;
   bottom: 0;
   background-color: inherit;
-}
-.ngCell:first-child {
-  border-left: 0;
 }
 .ngCellText {
   padding: 5px;
