Fixed cell navigation
Cell navigation broke due to there being an extra element in the cell.
Also changed the color of the focused cell to be different than selected
rows to be easier to identify. Fixed issue #510. Now when mouse clicking
within cell, rows won't keep being selected and deselected.

--- a/ng-grid.css
+++ b/ng-grid.css
@@ -340,7 +340,7 @@
 }
 .ngCellElement:focus {
   outline: 0;
-  background-color: #c9dde1;
+  background-color: #b3c4c7;
 }
 .ngRow.canSelect {
   cursor: pointer;
