Update menuTemplate.html searchPlaceholder so that it binds to the correct model

--- a/src/templates/menuTemplate.html
+++ b/src/templates/menuTemplate.html
@@ -3,7 +3,7 @@
 </div>
 <div ng-show="showMenu" class="ngColMenu">
     <div ng-show="showFilter">
-        <input placeholder="{{i18n.ngSearchPlaceHolder}}" type="text" ng-model="filterText"/>
+        <input placeholder="{{i18n.ngSearchPlaceHolder}}" type="text" ng-model="filterOptions.filterText"/>
     </div>
     <div ng-show="showColumnMenu">
         <span class="ngMenuText">{{i18n.ngMenuText}}</span>
