Added column pinning classes back.
Switched vertical bars to be on right so columns pinned on left have
right border.

--- a/src/less/cell.less
+++ b/src/less/cell.less
@@ -6,6 +6,10 @@
   background-color: inherit;
 }
 
+.ngCell.pinned {
+    z-index: 1;
+}
+
 .ngCellText {
   padding: 5px;
   -moz-box-sizing: border-box;
