Updated server-side paging example and updated to latest ng-grid

--- a/partials/exampleDefinitions/paging/pagingJS.html
+++ b/partials/exampleDefinitions/paging/pagingJS.html
@@ -4,17 +4,17 @@ app.controller('MyCtrl', function($scope, $http) {
     $scope.filterOptions = {
         filterText: "",
         useExternalFilter: true
-    };
+    }; 
+    $scope.totalServerItems = 0;
     $scope.pagingOptions = {
         pageSizes: [250, 500, 1000],
         pageSize: 250,
-        totalServerItems: 0,
         currentPage: 1
     };	
     $scope.setPagingData = function(data, page, pageSize){	
         var pagedData = data.slice((page - 1) * pageSize, page * pageSize);
         $scope.myData = pagedData;
-        $scope.pagingOptions.totalServerItems = data.length;
+        $scope.totalServerItems = data.length;
         if (!$scope.$$phase) {
             $scope.$apply();
         }
@@ -55,6 +55,7 @@ app.controller('MyCtrl', function($scope, $http) {
         data: 'myData',
         enablePaging: true,
 		showFooter: true,
+        totalServerItems: 'totalServerItems',
         pagingOptions: $scope.pagingOptions,
         filterOptions: $scope.filterOptions
     };
