added enable edit on focus and fixed excel like editing example

--- a/partials/exampleDefinitions/cellSelection/excelEditing/excelEditingJS.html
+++ b/partials/exampleDefinitions/cellSelection/excelEditing/excelEditingJS.html
@@ -10,7 +10,7 @@ app.controller('MyCtrl', function($scope) {
         data: 'myData',
         enableCellSelection: true,
         enableRowSelection: false,
-        enableCellEditOnFocus: true,
+        enableCellEdit: true,
         columnDefs: [{field: 'name', displayName: 'Name', enableCellEdit: true}, 
                      {field:'age', displayName:'Age', enableCellEdit: true}]
     };
