--- a/partials/exampleDefinitions/cellSelection/cellSelectionExample.html
+++ b/partials/exampleDefinitions/cellSelection/cellSelectionExample.html
@@ -1,3 +1,4 @@
 <h1 style="margin-top: 0;">Cell Selection Examples</h1>
 <div ng-include src="'partials/exampleDefinitions/cellSelection/basicCellSelection/basicCellSelectionExample.html'" style="height: 500px"></div>
 <div ng-include src="'partials/exampleDefinitions/cellSelection/editOnFocusCellSelection/editOnFocusCellSelectionExample.html'" style="height: 500px"></div>
+<div ng-include src="'partials/exampleDefinitions/cellSelection/excelEditing/excelEditingExample.html'" style="height: 500px"></div>
