--- a/partials/exampleDefinitions/cellSelection/excelEditing/excelEditingExample.html
+++ b/partials/exampleDefinitions/cellSelection/excelEditing/excelEditingExample.html
@@ -1,7 +1,7 @@
-<div ng-controller="EditOnFocusCellSelectionExampleCtrl">
-	<h3 style="margin-top: 0">Edit On Focus Cell Selection Example</h3>
+<div ng-controller="ExcelEditingExampleCtrl">
+	<h3 style="margin-top: 0">Excel-like Editing Example</h3>
 	<div style="float: left; width: 600px">
-		<p>Below is an example on how to edit on focus in ng-grid:</p>
+		<p>Below is an example on how to edit like excel using ng-grid(double-click or start typing when a cell is focused):</p>
 		<ul style="margin-bottom:0px;" class="nav nav-tabs">
 			<li class="nav" ng-repeat="tab in basicTabs" ng-class="{active: selectedBasicTab == tab}">
 				<a ng-click="switchTab(tab.index)">{{tab.title}}</a>
@@ -10,7 +10,7 @@
 		<div ng-include src="link()"></div>
 	</div>
 	<div style="float: right">
-		<p>Below is the outcome of the grid. View plunker <a target="blank" href="http://plnkr.co/edit/KJmYbO?p=preview">here</a>.</p>
+		<p>Below is the outcome of the grid. View plunker <a target="blank" href="http://plnkr.co/edit/hy6Evh?p=preview">here</a>.</p>
 		<div style=" margin-left: auto; margin-right: auto; border: 1px solid rgb(212,212,212); width: 400px; height: 300px; margin-top: 20px; " ng-grid="gridOptions"></div>
 	</div>
 </div>
