--- a/src/templates/cellTemplate.html
+++ b/src/templates/cellTemplate.html
@@ -1,1 +1,1 @@
-<div class="ngCellText" ng-class="col.colIndex()"><span ng-cell-text>{{COL_FIELD CUSTOM_FILTERS}}</span></div>
+<div class="ngCellText" ng-class="col.colIndex()"><span ng-cell-text class="ngTextItem">{{COL_FIELD CUSTOM_FILTERS}}</span></div>
