--- a/ng-grid.css
+++ b/ng-grid.css
@@ -372,7 +372,7 @@
   margin-left: 6px;
 }
 .ngFooterPanel {
-  background-color: #eaeaea;
+  background-color: #fff;
   padding: 0;
   border-top: 1px solid #d4d4d4;
   position: relative;
