--- a/partials/gettingStartedPage.html
+++ b/partials/gettingStartedPage.html
@@ -18,7 +18,7 @@
 }</pre></li>
 					<li>In your javascript file within the controller where you plan to use<br />ng-grid, lets add data that our grid will use:<br /> </li>
 					<pre style="margin-top:10px" class="prettyprint">$scope.myData = [{name: "Moroni", age: 50},
-                 {name: "Tiancum", age: 43},
+                 {name: "Teancum", age: 43},
                  {name: "Jacob", age: 27},
                  {name: "Nephi", age: 29},
                  {name: "Enos", age: 34}];</pre></li>
@@ -60,7 +60,7 @@
 var app = angular.module('myApp', ['ngGrid']);
 app.controller('MyCtrl', function($scope) {
     $scope.myData = [{name: "Moroni", age: 50},
-                     {name: "Tiancum", age: 43},
+                     {name: "Teancum", age: 43},
                      {name: "Jacob", age: 27},
                      {name: "Nephi", age: 29},
                      {name: "Enos", age: 34}];
