Update grid template / compiling to work with the latest version of angular

--- a/src/templates/gridTemplate.html
+++ b/src/templates/gridTemplate.html
@@ -13,7 +13,7 @@
         </ul>
     </div>
     <div class="ngHeaderContainer" ng-style="headerStyle()">
-        <div class="ngHeaderScroller" ng-style="headerScrollerStyle()" ng-include="gridId + 'headerRowTemplate.html'"></div>
+        <div ng-header-row class="ngHeaderScroller" ng-style="headerScrollerStyle()"></div>
     </div>
     <div ng-grid-menu></div>
 </div>
