WIP: messing with virtual-repeat

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,7 +1,16 @@
-.pinned.left {
+
+.ui-grid-header-table {
+  margin-bottom: 0;
+}
+
+.ui-grid-pinned.left {
   float: left;
 }
 
-.pinned.right {
+.ui-grid-pinned.right {
   float: right;
+}
+
+.ui-grid-viewport tbody, .ui-grid-viewport table tr:first-child, .ui-grid-viewport table tr:first-child > td {
+  border-top: none;
 }
