Fixed default grunt task not running. Also added `grunt build` task for running build without tests.

--- a/src/templates/ui-grid/ui-grid-header.html
+++ b/src/templates/ui-grid/ui-grid-header.html
@@ -1,5 +1,5 @@
 <div>
-  <table class="ui-grid-header" ng-class="tableClass">
+  <table class="ui-grid-header ui-grid-header-table" ng-class="tableClass">
     <thead>
       <tr>
         <th ng-repeat="col in columns">{{ col.name }}</th>
