--- a/src/less/global.less
+++ b/src/less/global.less
@@ -1,4 +1,3 @@
-
 @import 'colors';
 
 .ngGrid {
@@ -45,7 +44,12 @@
   width: 1px;
   background-color: @borderColor;
 }
-
+#testDataLength {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -100000;
+}
 @import 'header';
 @import 'menu';
 @import 'grouping';
