--- a/src/templates/ui-grid/ui-grid-header.html
+++ b/src/templates/ui-grid/ui-grid-header.html
@@ -1,4 +1,4 @@
-<div>
+<!-- <div>
   <table class="ui-grid-header ui-grid-header-table" ng-class="tableClass">
     <thead>
       <tr>
@@ -6,4 +6,15 @@
       </tr>
     </thead>
   </table>
+</div> -->
+
+<div class="ui-grid-top-panel">
+    <div class="ui-grid-header">
+      <div ng-style="{ height: col.headerRowHeight }" ng-repeat="col in renderedColumns" ng-class="col.colIndex()" class="ngHeaderCell">
+        <div class="ngVerticalBar" ng-style="{height: col.headerRowHeight}" ng-class="{ ngVerticalBarVisible: !$last }">&nbsp;</div>
+        <div ng-header-cell></div>
+      </div>
+    </div>
+
+    <div ui-grid-menu></div>
 </div>
