--- a/src/templates/ui-grid/ui-grid.html
+++ b/src/templates/ui-grid/ui-grid.html
@@ -1,7 +1,19 @@
-<div class="ui-grid ui-grid-viewport">
+<!-- <div class="ui-grid ui-grid-viewport">
 
   <div ui-grid-header ui-grid-table-class="tableClass"></div>
 
   <div ui-grid-body ui-grid-table-class="tableClass"></div>
   
+</div> -->
+
+<div class="ui-grid">
+  <style>
+    .grid{{ gridId }}
+  </style>
+
+  <div ui-grid-header></div>
+
+  <div ui-grid-body></div>
+
+  <div ui-grid-footer></div>
 </div>
