WIP: rewriting grid directive

--- a/src/templates/ui-grid/ui-grid.html
+++ b/src/templates/ui-grid/ui-grid.html
@@ -7,8 +7,11 @@
 </div> -->
 
 <div class="ui-grid">
-  <style>
-    .grid{{ gridId }}
+  <!-- TODO (c0bra): add "scoped attr here, eventually? -->
+  <style ui-grid-style>
+    .grid{{ gridId }} {
+      /* Styles for the grid */
+    }
   </style>
 
   <div ui-grid-header></div>
