WIP: create working basic grid

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -1,16 +1,8 @@
 
-.ui-grid-header-table {
-  margin-bottom: 0;
-}
-
-.ui-grid-pinned.left {
-  float: left;
-}
-
-.ui-grid-pinned.right {
-  float: right;
-}
-
-.ui-grid-viewport tbody, .ui-grid-viewport table tr:first-child, .ui-grid-viewport table tr:first-child > td {
-  border-top: none;
-}
+@import 'grid';
+@import 'header';
+@import 'body';
+@import 'cell';
+@import 'footer';
+@import 'pinning';
+@import 'variables';
