WIP: basic grid working, more or less

--- a/src/templates/ui-grid/ui-grid-body.html
+++ b/src/templates/ui-grid/ui-grid-body.html
@@ -1,7 +1,7 @@
 <div ui-grid-viewport class="ui-grid-viewport">
   <div class="ui-grid-canvas">
-    <div ng-repeat="row in renderedRows">
-      <div ui-grid-row="row"></div>
+    <div ng-repeat="row in renderedRows" class="ui-grid-row">
+      <div ui-grid-row="row" row-index="$index"></div>
     </div>
   </div>
 </div>
