--- a/src/templates/ui-grid/ui-grid-header.html
+++ b/src/templates/ui-grid/ui-grid-header.html
@@ -3,7 +3,7 @@
     <div ng-repeat="col in options.columnDefs" class="ui-grid-header-cell col{{ $index }}"> <!-- ng-style="{ height: col.headerRowHeight }" -->
       <div class="ui-grid-vertical-bar">&nbsp;</div> <!-- ng-style="{height: col.headerRowHeight}" ng-class="{ ngVerticalBarVisible: !$last }" -->
       <!-- <div ng-header-cell></div> -->
-      <div><span class="ui-grid-cell-contents">{{ col.name }}</span></div>
+      <div class="ui-grid-cell-contents">{{ col.name }}</span></div>
     </div>
   </div>
 
