--- a/src/templates/ui-grid/ui-grid-row.html
+++ b/src/templates/ui-grid/ui-grid-row.html
@@ -1,6 +1,6 @@
-<div class="ui-grid-row">
+<div>
   <div ng-repeat="col in options.columnDefs" class="ui-grid-cell col{{ $index }}"> <!-- ng-style="{ 'cursor': row.cursor }" ng-class="col.colIndex()" class="{{col.cellClass}}" -->
     <!-- <div class="ui-grid-vertical-bar">&nbsp;</div> --> <!-- ng-style="{height: rowHeight}" ng-class="{ ngVerticalBarVisible: !$last }" -->
-    <div><span class="ui-grid-cell-contents">{{ row[col.field] }}</span></div> <!-- ng-class="col.colIndex()" -->
+    <div class="ui-grid-cell-contents">{{ row[col.field] }}</div> <!-- ng-class="col.colIndex()" -->
   </div>
 </div>
