WIP: custom scrollbar on grid

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -3,6 +3,8 @@
 @import 'header';
 @import 'body';
 @import 'cell';
+@import 'scrollbar';
 @import 'footer';
 @import 'pinning';
+@import 'elements';
 @import 'variables';
