--- a/src/less/body.less
+++ b/src/less/body.less
@@ -2,6 +2,7 @@
 .ui-grid-viewport {
   // overflow: auto; // TODO(c0bra): turn back on when virtual repeater is hooked up
   min-height: 20px;
+  position: relative;
 
   :focus {
     outline: none;
@@ -10,6 +11,7 @@
 
 .ui-grid-canvas {
   position: relative;
+  overflow: hidden;
 }
 
 .ui-grid-row {
