--- a/misc/doc/templates/nav.html
+++ b/misc/doc/templates/nav.html
@@ -1,3 +1,3 @@
 <ul class="nav pull-right">
-  <li><a href="github.com">Github</a></li>
+  <li><a href="https://github.com/angular-ui/ng-grid/">Github</a></li>
 </ul>
