WIP: show border on bottom row when rows don't completely fill out viewport

--- a/src/less/body.less
+++ b/src/less/body.less
@@ -25,4 +25,9 @@
   &:nth-child(even) .ui-grid-cell {
     background-color: @rowColorEven;
   }
+
+  &:last-child .ui-grid-cell {
+    border-bottom-color: @borderColor;
+    border-bottom-style: solid;
+  }
 }
