--- a/src/templates/ui-grid/ui-grid.html
+++ b/src/templates/ui-grid/ui-grid.html
@@ -18,6 +18,10 @@
       height: {{ options.rowHeight }}px;
     }
 
+    .grid{{ gridId }} .ui-grid-row:last-child .ui-grid-cell {
+      border-bottom-width: {{ ((options.totalRowHeight < options.canvasHeight) && '1') || '0' }}px;
+    }
+
     {{ rowStyles }}
 
     {{ columnStyles }}
